Fix spacing below the "View basket" button in all templates

--- a/extended/widgets/ecom-product.less
+++ b/extended/widgets/ecom-product.less
@@ -100,6 +100,7 @@
         }
         .ecom-product-long-description {
             clear: both;
+            margin-top: 1em;
         }
     } /* end ecom-product */
 } /* end .widget.ecomproduct */
